--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -553,6 +553,7 @@ ExportDialog.includeInitialBalanceCheckBox=Inclure le solde initial
 ExportDialog.includeInitialBalanceCheckBox.toolTip=Cochez cette case pour inclure des opérations simulées reflétant le solde initial des comptes
 ExportDialog.message=<html>Cochez les colonnes à inclure dans le fichier.<br>Vous pouvez changez l'ordre des colonnes dans le fichier en le modifiant ci-dessous.</html> 
 ExportDialog.nothingToExport=You must select at least one field to export
+ExportDialog.done=Exportation terminée
 
 ImportDialog.title=Importer
 ImportDialog.YapbamFields=Attribut d'opération de Yapbam
@@ -570,3 +571,8 @@ ImportDialog.addToAccount=Ajouter au compte :
 ImportDialog.addToAccount.toolTip=Choisissez le compte où ajouter les opérations
 ImportDialog.addToCurrentFile=Ajouter au fichier courant
 ImportDialog.addToCurrentFile.toolTip=Cochez cette case pour ajouter les opérations au fichier courant (déselectionner pour créer un nouveau fichier)
+ImportDialog.defaultAccount=Compte par défault
+ImportDialog.help=Aide
+ImportDialog.help.toolTip=Cliquez ici pour obtenir de l'aide sur l'importation
+ImportDialog.noAmountSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez pas s\u00E9lectionn\u00E9 de champ contenant le montant des op\u00E9rations
+ImportDialog.noDateSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez pas s\u00E9lectionn\u00E9 de champ contenant la date des op\u00E9rations
