--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -576,3 +576,7 @@ ImportDialog.help=Aide
 ImportDialog.help.toolTip=Cliquez ici pour obtenir de l'aide sur l'importation
 ImportDialog.noAmountSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez pas s\u00E9lectionn\u00E9 de champ contenant le montant des op\u00E9rations
 ImportDialog.noDateSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez pas s\u00E9lectionn\u00E9 de champ contenant la date des op\u00E9rations
+ImportDialog.errorMessage.title=Erreurs lors de l'import
+ImportDialog.errorMessagelienNumberColumnHeader=n\u00B0 de ligne
+ImportDialog.errorMessagelineColumnHeader=ligne
+ImportDialog.errorMessagemessage=<html>Des erreurs sont survenues lors de l'import du fichier.<br>Les lignes suivantes ont \u00E9t\u00E9 ignor\u00E9es.</html>
