--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -579,4 +579,4 @@ ImportDialog.noDateSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez pa
 ImportDialog.errorMessage.title=Erreurs lors de l'import
 ImportDialog.errorMessagelienNumberColumnHeader=n\u00B0 de ligne
 ImportDialog.errorMessagelineColumnHeader=ligne
-ImportDialog.errorMessagemessage=<html>Des erreurs sont survenues lors de l'import du fichier.<br>Les lignes suivantes ont \u00E9t\u00E9 ignor\u00E9es.</html>
+ImportDialog.errorMessagemessage=<html>Des erreurs sont survenues lors de l'import du fichier.<br>Les lignes suivantes n'ont pu être décodées et ont été ignorées.</html>
