Insert Sharada's changes to Portuguese resource file in order to help Marco's work

--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -52,7 +52,7 @@ MainMenu.SaveAs.ToolTip=Cria uma c\u00F3pia do arquivo atual
 
 MainMenu.Import=Import
 MainMenu.Import.Mnemonic=I
-MainMenu.Import.ToolTip=Importa dados de outra contra através de um arquivo
+MainMenu.Import.ToolTip=Imports data from a text file saved earlier with another account manager
 MainMenu.Export=Export ...
 MainMenu.Export.Mnemonic=E
 MainMenu.Export.ToolTip=Exports data to a text file
@@ -540,17 +540,17 @@ ExportDialog.allRadioButton=Export all transactions
 ExportDialog.allRadioButton.toolTip=Select this option to export all the transactions
 ExportDialog.columnSeparator=Column separator
 ExportDialog.columnSeparator.customized=Customized:
-ExportDialog.columnSeparator.customized.toolTip=Select this option to enter a customized separator in the field beside
-ExportDialog.columnSeparator.customizedChar.toolTip=Enter the customized separator here
+ExportDialog.columnSeparator.customized.toolTip=Select this option to specify a column separator of your choice
+ExportDialog.columnSeparator.customizedChar.toolTip=Enter the preferred separator
 ExportDialog.columnSeparator.defaultSeparator=Default (Tab)
-ExportDialog.columnSeparator.defaultSeparator.toolTip=Select this option to use the default column separator (Tab character)
-ExportDialog.columnSeparator.customized.empty=Please type a customized column separator (only one character) or select the default one
+ExportDialog.columnSeparator.defaultSeparator.toolTip=Select this option to use the default separator (Tab character)
+ExportDialog.columnSeparator.customized.empty=Please enter a column separator of your choice (only one character) or uncheck to use the default
 ExportDialog.filteredRadioButton=Export filtered transactions
-ExportDialog.filteredRadioButton.toolTip=Select this option to only export filtered transactions
+ExportDialog.filteredRadioButton.toolTip=Select this option to export only filtered transactions
 ExportDialog.headerCheckbox=Include column headers
 ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a header line
 ExportDialog.includeInitialBalanceCheckBox=Include initial balance
-ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include fake transactions that will reflect the account initial balance
+ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include transactions simulated to reflect the initial balance
 ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
 ExportDialog.nothingToExport=You must select at least one field to export
 ExportDialog.done=Export done
@@ -558,24 +558,24 @@ ExportDialog.done=Export done
 ImportDialog.title=Import
 ImportDialog.YapbamFields=Yapbam transaction fields
 ImportDialog.linkedTo=Linked to
-ImportDialog.linkedTo.toolTip=Check these boxes to link file columns with transaction fields
-ImportDialog.importedFields=Imported file columns
-ImportDialog.importedFields.toolTip=Select here which file column contains each Yapbam transaction attribute
+ImportDialog.linkedTo.toolTip=Check these boxes to associate columns in the file with fields of transactions
+ImportDialog.importedFields=Columns in the file
+ImportDialog.importedFields.toolTip=Select the column corresponding to each Yapbam transaction field
 ImportDialog.ignoreFirstLine=Ignore first line
-ImportDialog.ignoreFirstLine.toolTip=Check this box to ignore the file first line (if it's a header line)
-ImportDialog.first.toolTip=Sets imported file columns menus to first file line
-ImportDialog.last.toolTip=Sets imported file columns menus to last file line
-ImportDialog.next.toolTip=Sets imported file columns menus to next file line
-ImportDialog.previous.toolTip=Sets imported file columns menus to previous file line
-ImportDialog.addToAccount=Add to account:
-ImportDialog.addToAccount.toolTip=Select the account where to add the transactions
+ImportDialog.ignoreFirstLine.toolTip=If the first line of the file is a header, check this box to ignore the header 
+ImportDialog.first.toolTip=Uses the first line of the imported file for identifying the column titles
+ImportDialog.last.toolTip=Uses the last line of the imported file for identifying the column titles
+ImportDialog.next.toolTip=Uses the next line of the imported file for identifying the column titles
+ImportDialog.previous.toolTip=Uses the previous line of the imported file for identifying the column titles
+ImportDialog.addToAccount=Add to the account:
+ImportDialog.addToAccount.toolTip=Select the account to add the transactions
 ImportDialog.addToCurrentFile=Add to current file
-ImportDialog.addToCurrentFile.toolTip=Check this box to add transactions to the current file (uncheck to create a new file)
+ImportDialog.addToCurrentFile.toolTip=Check this box to add transactions to the current file (uncheck to create a new file for the imported transactions)
 ImportDialog.defaultAccount=Default account
 ImportDialog.help=Help
 ImportDialog.help.toolTip=Click this to get help on import
-ImportDialog.noAmountSelected=No incoming field is selected for amount
-ImportDialog.noDateSelected=No incoming field is selected for date
-ImportDialog.errorMessage.title=Errors occurred during import
+ImportDialog.noAmountSelected=The amount field is not associated with any column of the file
+ImportDialog.noDateSelected=The date field is not associated with any column of the file
+ImportDialog.errorMessage.title=Error during import
 ImportDialog.errorMessagelienNumberColumnHeader=Line number
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines were ignored.</html>
