--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -264,6 +264,7 @@ TransactionDialog.category=Cat\u00E9gorie :
 TransactionDialog.category.tooltip=S\u00E9lectionnez dans ce menu la catégorie
 TransactionDialog.category.new.tooltip=Cliquez ici pour cr\u00E9er une nouvelle cat\u00E9gorie
 TransactionDialog.date=Date de l'op\u00E9ration :
+TransactionDialog.date.tooltip=Entrez ici la date de l'op\u00E9ration
 TransactionDialog.description=Libell\u00E9 :
 TransactionDialog.description.tooltip=Entrez ici le libell\u00E9 de l'op\u00E9ration
 TransactionDialog.mode=Mode de paiement :
