--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -264,6 +264,7 @@ TransactionDialog.category=Categoria :
 TransactionDialog.category.tooltip=Selecione a categoria
 TransactionDialog.category.new.tooltip=Clique para criar uma nova categoria
 TransactionDialog.date=Data de transa\u00e7\u00E3o :
+TransactionDialog.date.tooltip=Enter the transaction date here (need to be translated)
 TransactionDialog.description=Descri\u00e7\u00E3o :
 TransactionDialog.description.tooltip=Digite a descri\u00e7\u00E3o da transa\u00e7\u00E3o
 TransactionDialog.mode=Modo de pagamento :
