Partial 0.6 Portuguese translation

--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -264,7 +264,7 @@ TransactionDialog.category=Categoria :
 TransactionDialog.category.tooltip=Selecione a categoria
 TransactionDialog.category.new.tooltip=Clique para criar uma nova categoria
 TransactionDialog.date=Data de transa\u00e7\u00E3o :
-TransactionDialog.date.tooltip=Enter the transaction date here (need to be translated)
+TransactionDialog.date.tooltip=Entre a data de transa\u00e7\u00E3o aqui (precisa ser traduzido)
 TransactionDialog.description=Descri\u00e7\u00E3o :
 TransactionDialog.description.tooltip=Digite a descri\u00e7\u00E3o da transa\u00e7\u00E3o
 TransactionDialog.mode=Modo de pagamento :
@@ -536,47 +536,47 @@ BudgetPanel.perYear.tooltip=Seleciona o orçamento anual vistado
 ErrorManager.message=Um erro ocorreu \!\n A atual operação está sendo abortada.
 ErrorManager.title=Alerta \!\!\!
 
-ExportDialog.title=Export ...
-ExportDialog.allRadioButton=Export all transactions
-ExportDialog.allRadioButton.toolTip=Select this option to export all the transactions
-ExportDialog.columnSeparator=Column separator
-ExportDialog.columnSeparator.customized=Customized:
-ExportDialog.columnSeparator.customized.toolTip=Select this option to specify a column separator of your choice
-ExportDialog.columnSeparator.customizedChar.toolTip=Enter the preferred separator
-ExportDialog.columnSeparator.defaultSeparator=Default (Tab)
-ExportDialog.columnSeparator.defaultSeparator.toolTip=Select this option to use the default separator (Tab character)
-ExportDialog.columnSeparator.customized.empty=Please enter a column separator of your choice (only one character) or uncheck to use the default
-ExportDialog.filteredRadioButton=Export filtered transactions
-ExportDialog.filteredRadioButton.toolTip=Select this option to export only filtered transactions
-ExportDialog.headerCheckbox=Include column headers
-ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a header line
-ExportDialog.includeInitialBalanceCheckBox=Include initial balance
-ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include transactions simulated to reflect the initial balance
-ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
-ExportDialog.nothingToExport=You must select at least one field to export
-ExportDialog.done=Export done
+ExportDialog.title=Exportar ...
+ExportDialog.allRadioButton=Exporta todas transações
+ExportDialog.allRadioButton.toolTip=Selecione esta opção para exportar todas as transações
+ExportDialog.columnSeparator=Separador de colunas
+ExportDialog.columnSeparator.customized=Personalizador:
+ExportDialog.columnSeparator.customized.toolTip=Selecione esta opção para especificar e escolher o separador de colunas
+ExportDialog.columnSeparator.customizedChar.toolTip=Entre o separador preferido
+ExportDialog.columnSeparator.defaultSeparator=Padrão (Aba)
+ExportDialog.columnSeparator.defaultSeparator.toolTip=Selecione esta opção para especificar o separador padrão (aba de caracteres)
+ExportDialog.columnSeparator.customized.empty=Por favor entre o separador de coluna da sua escolha (somente um caractere) ou tire o selecionado para usar o padrão
+ExportDialog.filteredRadioButton=Exporta transações filtradas
+ExportDialog.filteredRadioButton.toolTip=Selecione esta opção para exportar somente transações filtradas
+ExportDialog.headerCheckbox=Inclui colunas do cabeçalho
+ExportDialog.headerCheckbox.toolTip=Confira esta caixa patra iniciar o arquivo com a linha do cabeçalho
+ExportDialog.includeInitialBalanceCheckBox=Inclui balanço inicial
+ExportDialog.includeInitialBalanceCheckBox.toolTip=Confira esta caixa para incluir transações simuladas para refletir o balanço inicial
+ExportDialog.message=<html>Confira as colunas para serem colocadas no arquivo.<br>Mova as colunas abaixo para mudar sua ordem no arquivo.</html> 
+ExportDialog.nothingToExport=Você deve selecionar pelo menos um campo para ser exportado
+ExportDialog.done=Exportação terminada.
 
-ImportDialog.title=Import
-ImportDialog.YapbamFields=Yapbam transaction fields
-ImportDialog.linkedTo=Linked to
-ImportDialog.linkedTo.toolTip=Check these boxes to associate columns in the file with fields of transactions
-ImportDialog.importedFields=Columns in the file
-ImportDialog.importedFields.toolTip=Select the column corresponding to each Yapbam transaction field
-ImportDialog.ignoreFirstLine=Ignore first line
-ImportDialog.ignoreFirstLine.toolTip=If the first line of the file is a header, check this box to ignore the header 
-ImportDialog.first.toolTip=Uses the first line of the imported file for identifying the column titles
-ImportDialog.last.toolTip=Uses the last line of the imported file for identifying the column titles
-ImportDialog.next.toolTip=Uses the next line of the imported file for identifying the column titles
-ImportDialog.previous.toolTip=Uses the previous line of the imported file for identifying the column titles
-ImportDialog.addToAccount=Add to the account:
-ImportDialog.addToAccount.toolTip=Select the account to add the transactions
-ImportDialog.addToCurrentFile=Add to current file
-ImportDialog.addToCurrentFile.toolTip=Check this box to add transactions to the current file (uncheck to create a new file for the imported transactions)
-ImportDialog.defaultAccount=Default account
-ImportDialog.help=Help
-ImportDialog.help.toolTip=Click this to get help on import
-ImportDialog.noAmountSelected=The amount field is not associated with any column of the file
-ImportDialog.noDateSelected=The date field is not associated with any column of the file
-ImportDialog.errorMessage.title=Error during import
-ImportDialog.errorMessagelienNumberColumnHeader=Line number
-ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines were ignored.</html>
+ImportDialog.title=Importar
+ImportDialog.YapbamFields=Yapbam campo de transações
+ImportDialog.linkedTo=Ligado a
+ImportDialog.linkedTo.toolTip=Confira estas caixas para associá-las a colunas no arquivo de campo das transações
+ImportDialog.importedFields=Colunas no arquivo
+ImportDialog.importedFields.toolTip=Selecione a coluna correspondente para cada campo da transação no Yapbam 
+ImportDialog.ignoreFirstLine=Ingore a primeira linha
+ImportDialog.ignoreFirstLine.toolTip=Se ao primeira linha do arquivo e um cabeçalho, confira esta caixa para ignorar o cabeçalho
+ImportDialog.first.toolTip=Use a primeira linha do arquivo importado para identificação dos títulos das colunas
+ImportDialog.last.toolTip=Use a última linha do arquivo importado para identificação dos títulos das colunas
+ImportDialog.next.toolTip=Use a próxima linha do arquivo importado para identificação dos títulos das colunas
+ImportDialog.previous.toolTip=Use a linha anterior do arquivo importado para identificação dos títulos das colunas
+ImportDialog.addToAccount=Adiciona na conta:
+ImportDialog.addToAccount.toolTip=Selecione a conta para adicionar a transação
+ImportDialog.addToCurrentFile=Adiciona no arquivo atual
+ImportDialog.addToCurrentFile.toolTip=Confira esta caixa para adicionar transações no arquivo atual (de-selecione para criar um novo arquivo das transações importadas)
+ImportDialog.defaultAccount=Conta padrão
+ImportDialog.help=Ajuda
+ImportDialog.help.toolTip=Clique para ajuda sobre como importar
+ImportDialog.noAmountSelected=O valor do campo não está associado com nenhuma coluna do arquivo
+ImportDialog.noDateSelected=A data do campo não está associado com nenhuma coluna do arquivo
+ImportDialog.errorMessage.title=Erro durante importação
+ImportDialog.errorMessagelienNumberColumnHeader=Número da linha
+ImportDialog.errorMessagemessage=<html>Erros ocorreram durante importação do arquivo.<br>Não foi possível a separação das linhas seguintes and estas linhas foram ignoradas.</html>
