--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -50,12 +50,12 @@ MainMenu.SaveAs=Salvar como ...
 MainMenu.SaveAs.Mnemonic=S
 MainMenu.SaveAs.ToolTip=Cria uma c\u00F3pia do arquivo atual
 
-MainMenu.Import=Import
+MainMenu.Import=Importar
 MainMenu.Import.Mnemonic=I
-MainMenu.Import.ToolTip=Imports data from a text file saved earlier with another account manager
-MainMenu.Export=Export ...
+MainMenu.Import.ToolTip=Importa dados através de um arquivo de texto salvo anteriormente com outro Gerenciador de Contas
+MainMenu.Export=Exportar ...
 MainMenu.Export.Mnemonic=E
-MainMenu.Export.ToolTip=Exports data to a text file
+MainMenu.Export.ToolTip=Exporta dados para um arquivo de texto
 
 MainMenuBar.Print=Imprimir ...
 MainMenuBar.Print.ToolTip=Imprimi a vista atual
