--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -580,3 +580,6 @@ ImportDialog.noDateSelected=A data do campo não está associado com nenhuma colun
 ImportDialog.errorMessage.title=Erro durante importação
 ImportDialog.errorMessagelienNumberColumnHeader=Número da linha
 ImportDialog.errorMessagemessage=<html>Erros ocorreram durante importação do arquivo.<br>Não foi possível a separação das linhas seguintes and estas linhas foram ignoradas.</html>
+
+-- Added after v0.6.0
+BalanceHistory.alertTooltipAdd=First alert on {0}
