Introduces the ability to change plugins panel names and tooltips. Changes the tooltip of balance history panel when an alert is fired

--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -580,3 +580,6 @@ ImportDialog.noDateSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez pa
 ImportDialog.errorMessage.title=Erreurs lors de l'import
 ImportDialog.errorMessagelienNumberColumnHeader=n\u00B0 de ligne
 ImportDialog.errorMessagemessage=<html>Des erreurs sont survenues lors de l'import du fichier.<br>Les lignes suivantes n'ont pu être décodées et ont été ignorées.</html>
+
+-- Added after v0.6.0
+BalanceHistory.alertTooltipAdd=Première alerte le {0}
