--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -581,5 +581,67 @@ ImportDialog.errorMessage.title=Erro durante importação
 ImportDialog.errorMessagelienNumberColumnHeader=Número da linha
 ImportDialog.errorMessagemessage=<html>Erros ocorreram durante importação do arquivo.<br>Não foi possível a separação das linhas seguintes and estas linhas foram ignoradas.</html>
 
--- Added after v0.6.0
+
+
+-- Added since v0.6.0
+#Added menu items
+MainMenu.web.support=Get support
+MainMenu.web.support.tooltip=Opens Yapbam support web page (requires an Internet connection) to report a bug, a translation mistake, get support, ... 
+MainMenu.web.yapbam=Visit Yapbam web site
+MainMenu.web.yapbam.tooltip=Opens Yapbam web site home page (requires an Internet connection)
+
+#Dialog displayed during online check for updates
+MainMenu.CheckUpdate.Dialog.title=Checking for updates
+MainMenu.CheckUpdate.Dialog.message=Looking for updates. Please wait ...
+MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancels search for updates
+
+#A new generic button
+GenericButton.ignore=Ignore
+
+#Alert message when the balance history has negative value in the future
 BalanceHistory.alertTooltipAdd=First alert on {0}
+
+#Tooltip of transaction edition dialog that allows user to create a new checkbook
+TransactionDialog.checkbook.new.tooltip=Click to create a new checkbook
+
+#Account administration panel / account's table (payment modes and checkbooks informations)
+AccountManager.modesNumber.title=Number of payment modes
+AccountManager.modesNumber.toolTip=This column contains the number of payment modes attached to this account
+AccountManager.checkbooksNumber.title=Number of checkbooks
+AccountManager.checkbooksNumber.toolTip=This column contains the number of checkbooks attached to this account
+
+#Account administration panel / checkbook's table
+checkbookDialog.border.title=Checkbooks
+checkbookDialog.Delete.tooltip=Deletes the selected checkbook
+checkbookDialog.book.short=Checkbook
+checkbookDialog.remaining.short=Number of checks remaining
+checkbookDialog.next.short=Next check
+checkbookDialog.New.tooltip=Creates a new checkbook
+
+#Checkbook edition dialog
+checkbookDialog.title.new=New checkbook
+checkbookDialog.title.edit=Edit checkbook
+checkbookDialog.prefix=Prefix
+checkbookDialog.prefix.tooltip=Enter the prefix common to every checks in the checkbook
+checkbookDialog.first=First check's number:
+checkbookDialog.first.tooltip=Enter the first check number in the checkbook
+checkbookDialog.number=Number of checks:
+checkbookDialog.number.tooltip=Enter the number of checks in the checkbook
+checkbookDialog.next=Next available check's number:
+checkbookDialog.next.tooltip=Enter the next available check number of the checkbook
+checkbookDialog.error.firstIsBlank=Disabled because the first check is blank
+checkbookDialog.error.numberIsBlank=Disabled because the number of checks in the checkbook is blank
+checkbookDialog.error.numberOutOfRange=Disabled because the number of checks you entered is too big
+checkbookDialog.error.nextIsBlank=Disabled because the next check is blank
+checkbookDialog.error.nextOutsideOfCheckbook=Disabled because the next check number is not contained in this checkbook
+
+#Dialog displayed when the last check in a checkbook is used
+checkbookDialog.finished.title=Checkbook finished
+checkbookDialog.finished.message=The checkbook ({0}->{1}) is finished, what do you want to do ?
+checkbookDialog.finished.createNew=Create a new one
+checkbookDialog.finished.delete=Delete the checkbook
+checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new one
+
+#Displayed when some periodical transactions not yet generated are detected (not yet implemented)
+GeneratePeriodicalTransactionsDialog.title=Some periodical transactions are pending and may probably be generated.
+
