--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -581,5 +581,64 @@ ImportDialog.errorMessage.title=Erreurs lors de l'import
 ImportDialog.errorMessagelienNumberColumnHeader=n\u00B0 de ligne
 ImportDialog.errorMessagemessage=<html>Des erreurs sont survenues lors de l'import du fichier.<br>Les lignes suivantes n'ont pu être décodées et ont été ignorées.</html>
 
--- Added after v0.6.0
+-- Added since v0.6.0
+#Added menu items
+MainMenu.web.support=Support ...
+MainMenu.web.support.tooltip=Ouvre la page Web de support de Yapbam (requiert une connexion Internet) pour signaler un bug, une erreur de traduction, obtenir de l'aide, etc ... 
+MainMenu.web.yapbam=Visiter le site web de Yapbam
+MainMenu.web.yapbam.tooltip=Ouvre le site web de Yapbam (requiert une connexion Internet)
+
+#Dialog displayed during online check for updates
+MainMenu.CheckUpdate.Dialog.title=Recherche des mises à jour
+MainMenu.CheckUpdate.Dialog.message=Recherche des mises à jour en cours. Merci de patienter ...
+MainMenu.CheckUpdate.Dialog.cancel.tooltip=Abandonne la recherche des mises à jour
+
+#A new generic button
+GenericButton.ignore=Ignorer
+
+#Alert message when the balance history has negative value in the future
 BalanceHistory.alertTooltipAdd=Première alerte le {0}
+
+#Tooltip of transaction edition dialog that allows user to create a new checkbook
+TransactionDialog.checkbook.new.tooltip=Cliquez ici pour créer un nouveau chéquier
+
+#Account administration panel / account's table (payment modes and checkbooks informations)
+AccountManager.modesNumber.title=Nombre de modes de paiement
+AccountManager.modesNumber.toolTip=Cette colonne contient le nombre de modes de paiement de chaque compte
+AccountManager.checkbooksNumber.title=Nombre de chéquiers
+AccountManager.checkbooksNumber.toolTip=Cette colonne contient le nombre de chéquiers de chaque compte
+
+#Account administration panel / checkbook's table
+checkbookDialog.border.title=Chéquiers
+checkbookDialog.Delete.tooltip=Ce bouton supprime le chéquier sélectionné
+checkbookDialog.book.short=Chéquier
+checkbookDialog.remaining.short=Nombre de chèques restant
+checkbookDialog.next.short=Prochain chèque
+checkbookDialog.New.tooltip=Ce bouton permet de créer un nouveau chéquier
+
+#Checkbook edition dialog
+checkbookDialog.title.new=Nouveau chéquier
+checkbookDialog.title.edit=Edition de chéquier
+checkbookDialog.prefix=Préfixe
+checkbookDialog.prefix.tooltip=Entrez le préfixe commun à tous les chèques de ce chéquier
+checkbookDialog.first=Numéro du premier chèque :
+checkbookDialog.first.tooltip=Entrez le numéro du premier chèque dans le chéquier
+checkbookDialog.number=Nombre de chèques :
+checkbookDialog.number.tooltip=Entrez le nombre de chèque contenus dans le chéquier
+checkbookDialog.next=Prochain numéro de chèque :
+checkbookDialog.next.tooltip=Entrez le numéro du prochain chéque utilisable
+checkbookDialog.error.firstIsBlank=Ce bouton est désactivé car le numéro du premier chèque n'est pas renseigné
+checkbookDialog.error.numberIsBlank=Ce bouton est désactivé car le nombre de chèques dans le chèquier n'est pas renseigné
+checkbookDialog.error.numberOutOfRange=Ce bouton est désactivé car le nombre de chèque que vous avez saisi est trop grand
+checkbookDialog.error.nextIsBlank=Ce bouton est désactivé car le numéro du prochain chèque utilisable n'est pas renseigné
+checkbookDialog.error.nextOutsideOfCheckbook=Ce bouton est désactivé car le numéro du prochain chèque utilisable n'est pas compris dans le chéquier
+
+#Dialog displayed when the last check in a checkbook is used
+checkbookDialog.finished.title=Chéquier terminé
+checkbookDialog.finished.message=Le chéquier ({0}->{1}) est terminé, que souhaitez vous faire ?
+checkbookDialog.finished.createNew=En créer un nouveau
+checkbookDialog.finished.delete=Supprimer ce chéquier
+checkbookDialog.finished.DeleteAndCreateNew=Le supprimer et en créer un nouveau
+
+#Displayed when some periodical transactions not yet generated are detected (not yet implemented)
+GeneratePeriodicalTransactionsDialog.title=Des opérations périodiques sont en attente et devraient probablement être générées
