--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -585,63 +585,62 @@ ImportDialog.errorMessagemessage=<html>Erros ocorreram durante importação do arq
 
 -- Added since v0.6.0
 #Added menu items
-MainMenu.web.support=Get support
-MainMenu.web.support.tooltip=Opens Yapbam support web page (requires an Internet connection) to report a bug, a translation mistake, get support, ... 
-MainMenu.web.yapbam=Visit Yapbam web site
-MainMenu.web.yapbam.tooltip=Opens Yapbam web site home page (requires an Internet connection)
+MainMenu.web.support=Obtenha suporte
+MainMenu.web.support.tooltip=Abri Yapbam site de suporte (necessita de conexão com a Internet) para reportar um bug, tradução errada, obtenha suporte, ... 
+MainMenu.web.yapbam=Visit Yapbam site
+MainMenu.web.yapbam.tooltip=Abri Yapbam site (necessita de conexão com a Internet)
 
 #Dialog displayed during online check for updates
-MainMenu.CheckUpdate.Dialog.title=Checking for updates
-MainMenu.CheckUpdate.Dialog.message=Looking for updates. Please wait ...
-MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancels search for updates
+MainMenu.CheckUpdate.Dialog.title=Checando atualizações
+MainMenu.CheckUpdate.Dialog.message=Procurando for atualizações. Por favor espere ...
+MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancela a procura por atualizações 
 
 #A new generic button
 GenericButton.ignore=Ignore
 
 #Alert message when the balance history has negative value in the future
-BalanceHistory.alertTooltipAdd=First alert on {0}
+BalanceHistory.alertTooltipAdd=Primeiro alerta no {0}
 
 #Tooltip of transaction edition dialog that allows user to create a new checkbook
-TransactionDialog.checkbook.new.tooltip=Click to create a new checkbook
-
+TransactionDialog.checkbook.new.tooltip=Clique aqui para criar um novo livro-cheque
 #Account administration panel / account's table (payment modes and checkbooks informations)
-AccountManager.modesNumber.title=Number of payment modes
-AccountManager.modesNumber.toolTip=This column contains the number of payment modes attached to this account
-AccountManager.checkbooksNumber.title=Number of checkbooks
-AccountManager.checkbooksNumber.toolTip=This column contains the number of checkbooks attached to this account
+AccountManager.modesNumber.titleNúmero de modos de pagamento
+AccountManager.modesNumber.toolTip=Esta coluna contém o número de modos de pagamento anexado nesta conta
+AccountManager.checkbooksNumber.title=Número de livro-cheque
+AccountManager.checkbooksNumber.toolTip=Esta coluna contém o número de livro-cheque anexado nesta conta
 
 #Account administration panel / checkbook's table
-checkbookDialog.border.title=Checkbooks
-checkbookDialog.Delete.tooltip=Deletes the selected checkbook
-checkbookDialog.book.short=Checkbook
-checkbookDialog.remaining.short=Number of checks remaining
-checkbookDialog.next.short=Next check
-checkbookDialog.New.tooltip=Creates a new checkbook
+checkbookDialog.border.title=Livro-cheque
+checkbookDialog.Delete.tooltip=Deleta os livro-cheques selecionados
+checkbookDialog.book.short=Livro-cheque
+checkbookDialog.remaining.short=Número de cheques restantes
+checkbookDialog.next.short=Próximo cheque
+checkbookDialog.New.tooltip=Cria um novo livro-cheque
 
 #Checkbook edition dialog
-checkbookDialog.title.new=New checkbook
-checkbookDialog.title.edit=Edit checkbook
-checkbookDialog.prefix=Prefix
-checkbookDialog.prefix.tooltip=Enter the prefix common to every checks in the checkbook
-checkbookDialog.first=First check's number:
-checkbookDialog.first.tooltip=Enter the first check number in the checkbook
-checkbookDialog.number=Number of checks:
-checkbookDialog.number.tooltip=Enter the number of checks in the checkbook
-checkbookDialog.next=Next available check's number:
-checkbookDialog.next.tooltip=Enter the next available check number of the checkbook
-checkbookDialog.error.firstIsBlank=Disabled because the first check is blank
-checkbookDialog.error.numberIsBlank=Disabled because the number of checks in the checkbook is blank
-checkbookDialog.error.numberOutOfRange=Disabled because the number of checks you entered is too big
-checkbookDialog.error.nextIsBlank=Disabled because the next check is blank
-checkbookDialog.error.nextOutsideOfCheckbook=Disabled because the next check number is not contained in this checkbook
+checkbookDialog.title.new=Novo livro-cheque
+checkbookDialog.title.edit=Editar livro-cheque
+checkbookDialog.prefix=Prefixo
+checkbookDialog.prefix.tooltip=Entre o prefixo comum a todos os cheques no livro-cheque
+checkbookDialog.first=Primeiro número do cheque:
+checkbookDialog.first.tooltip=Entre o primeiro número do cheque no livro-cheque
+checkbookDialog.number=Número de cheques:
+checkbookDialog.number.tooltip=Entre o número de cheques no livro-cheque
+checkbookDialog.next=Próximo número de cheque disponível:
+checkbookDialog.next.tooltip=Entre o próximo número de cheque disponível no livro-cheque
+checkbookDialog.error.firstIsBlank=Disabilite porque o primeiro cheque está em branco
+checkbookDialog.error.numberIsBlank=Disabilite porque o número de cheques no livro-cheque está em branco
+checkbookDialog.error.numberOutOfRange=Disabilite porque o número de cheques que você entrou é muito grande
+checkbookDialog.error.nextIsBlank=Disabilite porque o próximo cheque está em branco
+checkbookDialog.error.nextOutsideOfCheckbook=Disabilite porque o próximo número de cheque não está contido neste livro-cheque
 
 #Dialog displayed when the last check in a checkbook is used
-checkbookDialog.finished.title=Checkbook finished
-checkbookDialog.finished.message=The checkbook ({0}->{1}) is finished, what do you want to do ?
-checkbookDialog.finished.createNew=Create a new one
-checkbookDialog.finished.delete=Delete the checkbook
-checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new one
+checkbookDialog.finished.title=Livro-cheque terminado
+checkbookDialog.finished.message=O livro-cheque ({0}->{1}) está terminado, o que você quer fazer ?
+checkbookDialog.finished.createNew=Cria um novo
+checkbookDialog.finished.delete=Deleta o livro-cheque
+checkbookDialog.finished.DeleteAndCreateNew=Deleta o mesmo e cria um novo
 
 #Displayed when some periodical transactions not yet generated are detected (not yet implemented)
-GeneratePeriodicalTransactionsDialog.title=Some periodical transactions are pending and may probably be generated.
+GeneratePeriodicalTransactionsDialog.title=Algumas transações periódicas estão pendentes e provavelmente serão geradas.
 
