--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -7,7 +7,7 @@ MainFrame.CheckedBalance.ToolTip=Solde actuel (ne tient compte que des op\u00E9r
 MainFrame.CurrentBalance.ToolTip=Solde actuel (ne tient pas compte des op\u00E9rations dont la date de valeur est post\u00E9rieure \u00E0 aujourd'hui)
 MainFrame.FinalBalance.ToolTip=Solde final (tient compte de toutes les op\u00E9rations)
 MainFrame.Transactions=Op\u00E9rations
-MainFrame.Transactions.toolTip=Table des op\u00E9rations et divers outils pour cr\u00E9, dupliquer, pointer, ... des op\u00E9rations
+MainFrame.Transactions.toolTip=Table des op\u00E9rations et divers outils pour cr\u00E9er, dupliquer, pointer, ... des op\u00E9rations
 MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Solde n\u00E9gatif : {0}
 MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Solde positif : {0}
 MainFrame.Transactions.Preferences.balanceSummary.title=R\u00E9capitulatif des soldes
