--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -645,3 +645,13 @@ GeneratePeriodicalTransactionsDialog.title=Des opérations périodiques sont en at
 
 # Added since v0.6.1
 MainFrame.ReadError=Yapbam ne peut pas lire ce fichier.
+
+#Added since 0.6.3
+#Alert administration panel
+AccountManager.alert.greaterThan=Solde > à
+AccountManager.alert.lessThan=Solde < à
+AccountManager.alert.no=Alerte désactivée
+AccountManager.alertKind.title=Alerte si
+AccountManager.alertThreshold.title=A
+AccountManager.alertKind.toolTip=Cliquez sur cette cellule pour sélectionner le type d'alerte
+AccountManager.alertThreshold.toolTip=Double cliquez sur cette cellule pour éditer le seuil de déclenchement de l'alerte du compte
