Adds alerts for balance more than x

--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -648,10 +648,7 @@ MainFrame.ReadError=Yapbam ne peut pas lire ce fichier.
 
 #Added since 0.6.3
 #Alert administration panel
-AccountManager.alert.greaterThan=Solde > à
-AccountManager.alert.lessThan=Solde < à
-AccountManager.alert.no=Alerte désactivée
-AccountManager.alertKind.title=Alerte si
-AccountManager.alertThreshold.title=A
-AccountManager.alertKind.toolTip=Cliquez sur cette cellule pour sélectionner le type d'alerte
-AccountManager.alertThreshold.toolTip=Double cliquez sur cette cellule pour éditer le seuil de déclenchement de l'alerte du compte
+AccountManager.alertThresholdLess.title=Alerte si le solde est inférieur à
+AccountManager.alertThresholdMore.title=Alerte si le solde est supérieur à
+AccountManager.alertThresholdLess.toolTip=Double cliquez sur cette cellule pour éditer le seuil de solde en deça duquel une alerte est déclenchée (laisser vide pour ne pas fixer de limite)
+AccountManager.alertThresholdMore.toolTip=Double cliquez sur cette cellule pour éditer le seuil de solde au delà duquel une alerte est déclenchée (laisser vide pour ne pas fixer de limite)
