--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -641,7 +641,7 @@ checkbookDialog.finished.delete=Supprimer ce chéquier
 checkbookDialog.finished.DeleteAndCreateNew=Le supprimer et en créer un nouveau
 
 #Displayed when some periodical transactions not yet generated are detected (not yet implemented)
-GeneratePeriodicalTransactionsDialog.title=Des opérations périodiques sont en attente et devraient probablement être générées
+GeneratePeriodicalTransactionsDialog.alert=Des opérations périodiques sont en attente et devraient probablement être générées
 
 # Added since v0.6.1
 MainFrame.ReadError=Yapbam ne peut pas lire ce fichier.
