--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -642,7 +642,7 @@ checkbookDialog.finished.delete=Deleta o livro-cheque
 checkbookDialog.finished.DeleteAndCreateNew=Deleta o mesmo e cria um novo
 
 #Displayed when some periodical transactions not yet generated are detected (not yet implemented)
-GeneratePeriodicalTransactionsDialog.title=Algumas transações periódicas estão pendentes e provavelmente serão geradas.
+GeneratePeriodicalTransactionsDialog.alert=Algumas transações periódicas estão pendentes e provavelmente serão geradas.
 
 # Added since v0.6.1
 Yapbam não pode ler este arquivo
