--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -662,3 +662,7 @@ BalanceHistory.alerts=Alertas:
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.alerts.toolTip=Selecione um alerta neste menu para ver o histórico do balanço da conta correspondente (muda o filtro atual)
 
+#---------------------------------------------------------------------------------------------------------------------------------
+#Added since 0.6.4
+saveDialog.FileExist.message=O arquivo já existe. Deseja substituí-lo?
+saveDialog.FileExist.title=Alerta
