--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -579,7 +579,6 @@ ImportDialog.noAmountSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez 
 ImportDialog.noDateSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez pas s\u00E9lectionn\u00E9 de champ contenant la date des op\u00E9rations
 ImportDialog.errorMessage.title=Erreurs lors de l'import
 ImportDialog.errorMessagelienNumberColumnHeader=n\u00B0 de ligne
-ImportDialog.errorMessagemessage=<html>Des erreurs sont survenues lors de l'import du fichier.<br>Les lignes suivantes n'ont pu être décodées et ont été ignorées.</html>
 
 # Added since v0.6.0
 #Added menu items
@@ -663,3 +662,9 @@ BalanceHistory.alerts.toolTip=Sélectionnez une alerte dans ce menu pour visualis
 #Added since 0.6.4
 saveDialog.FileExist.message=Ce fichier existe déjà. Voulez-vous l'écraser ?
 saveDialog.FileExist.title=Alerte
+
+ImportDialog.errorMessagemessage=<html>Des erreurs sont survenues lors de l'import du fichier.<br>Les lignes suivantes n'ont pu être décodées et seront ignorées.</html>
+ImportDialog.errorMessage.cancel.tooltip=Annule l'import
+ImportDialog.errorMessage.continue=Continuer
+ImportDialog.errorMessage.continue.tooltip=Continue l'import, les lignes comportant des erreurs seront ignorés
+
